--- a/apps/MainApp/templates/MainApp/index.html
+++ b/apps/MainApp/templates/MainApp/index.html
@@ -97,7 +97,10 @@
     </div>
 
     <div class="card w-220  text-white text-center p-3">
-        <footer class="blockquote-footer">Feed
+        <footer class="blockquote-footer">  <div class="form-group">
+                <label for="exampleFormControlTextarea1">Example textarea</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              </div>
                 <div class="media">
                         <img class="mr-3" src=".../64x64" alt="Generic placeholder image">
                         <div class="media-body">
@@ -124,7 +127,7 @@
 
     <div class="card w-75 p-3">
             <blockquote class="blockquote mb-0 card-body">
-            Organization block 6<br>
+            <a href="/Organizerpage">Organization block 6<br></a>
             <div class="media">
                     <img class="mr-3" src=".../64x64" alt="G">
                     <img class="mr-3" src=".../64x64" alt="G">
