--- a/apps/MainApp/templates/MainApp/FriendPage.html
+++ b/apps/MainApp/templates/MainApp/FriendPage.html
@@ -63,7 +63,7 @@
 </tr>
 </thead>
 <tbody>
-  {% for id in User %}
+  {% for id in all_users %}
   <tr>
   <th scope="row">{{id.id}}</th>
   <td>{{id.Firstname}} {{id.Lastname}}</td>
@@ -71,9 +71,9 @@
   <td>{{id.Phonenumber}}</td>
   <td>{{id.created_at}}</td>
   <td>
-      {% if friend not in User.Friendships %}
+      {% if friend not in logged_in_user.Friendships %}
         <a href="AddFriend/{{id.id}}">friend</a> |
-        <a href="/UnFriend/{{id.id}}">unfriend</a>
+        <a href="/UnFriend/{{id.id}}">unfriend</a> 
       {% else %}
         <a href="AddFriend/{{id.id}}">friend</a> |
         <a href="/UnFriend/{{id.id}}">unfriend</a> 
@@ -93,7 +93,6 @@
           <th scope="row">{{friendship.id}}</th>
           <td>{{friendship.Firstname}} {{friendship.Lastname}}</td>
           <td>{{friendship.Email}}</td>
-          <td>{{friendship.created_at}}</td>
           <td>
       </tbody></p>
       {% endfor %}
@@ -102,7 +101,7 @@
 </div>
 {% else %}
   <h1> how did you get here?!?</h1>
-    you must log in befor acsessing this page!
+    you must log in befor accessing this page!
   {% endif %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
